--- a/funciones/menu1.html
+++ b/funciones/menu1.html
@@ -1,28 +1,43 @@
-<ul class="acorh">
-  <li><a href="#">GESTIÓN DE EMPLEADOS</a>
-    <ul>
-      <li><a href="#">Alta de empleados</a></li>
-      <li><a href="#">Baja de empleados</a></li>
-      <li><a href="#">Modificación</a></li>
-    </ul>
+<ul class="collapsible">
+  <li class="active">
+    <div class="collapsible-header"><a href="#">GESTIÓN DE EMPLEADOS</a></div>
+  	<div class="collapsible-body">
+  	  <ul class="navega">
+  	    <li><a class="altEmpCli" href="#">Alta de empleados</a></li><hr>
+        <li><a class="bajEmpCli" href="#">Baja de empleados</a></li><hr>
+        <li><a class="modEmpCli" href="#">Modificación</a></li><hr>
+  	  </ul>
+  	</div>
   </li>
-  <li><a href="#">GESTIÓN DE CLIENTES</a>
-    <ul>
-      <li><a href="#">Alta de clientes</a></li>
-      <li><a href="#">Baja de clientes</a></li>
-      <li><a href="#">Modificación</a></li>
-    </ul>
+  <li>
+    <div class="collapsible-header"><a href="#">GESTIÓN DE CLIENTES</a></div>
+  	<div class="collapsible-body">
+  	  <ul class="navega">
+  	    <li><a class="altEmpCli" href="#">Alta de clientes</a></li><hr>
+        <li><a class="bajEmpCli" href="#">Baja de clientes</a></li><hr>
+        <li><a class="modEmpCli" href="#">Modificación</a></li><hr>
+  	  </ul>
+  	</div>
   </li>
-  <li><a href="#">REPORTES</a>
-    <ul>
-      <li><a href="#">Reporte 1</a></li>
-      <li><a href="#">Reporte 2</a></li>
-    </ul>
+  <li>
+    <div class="collapsible-header"><a href="#">REPORTES</a></div>
+  	<div class="collapsible-body">
+  	  <ul class="navega">
+  	    <li><a class="reportes" href="#">Reporte 1</a></li><hr>
+        <li><a class="reportes" href="#">Reporte 2</a></li><hr>
+  	  </ul>
+  	</div>
   </li>
-  <li><a href="#">INCIDENCIA</a>
-    <ul>
-      <li><a href="#">Alta incidencia</a></li>
-      <li><a href="#">Alta petición</a></li>
-    </ul>
+  <li>
+    <div class="collapsible-header"><a href="#">INCIDENCIA</a></div>
+  	<div class="collapsible-body">
+  	  <ul class="navega">
+  	    <li><a class="altIncAdmCli" href="#">Alta de incidencia</a></li><hr>
+        <li><a href="#">Alta de petición</a></li><hr>
+  	  </ul>
+  	</div>
   </li>
 </ul>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="js/scripts.js"></script>
