--- a/funciones/menu3.html
+++ b/funciones/menu3.html
@@ -1,24 +1,36 @@
-<ul class="acorh">
-  <li><a href="#">INCIDENCIAS</a>
-    <ul>
-      <li><a href="#">Alta de incidencia</a></li>
-      <li><a href="#">Alta de petición</a></li>
-      <li><a href="#">Mis incidencias</a></li>
-      <li><a href="#">Modificar incidencias</a></li>
-      <li><a href="#">Reabrir incidencias</a></li>
-      <li><a href="#">Detalle incidencia</a></li>
-    </ul>
+<ul class="collapsible">
+  <li class="active">
+    <div class="collapsible-header"><a href="#">INCIDENCIAS</a></div>
+  	<div class="collapsible-body">
+  	  <ul class="navega">
+        <li><a class="altIncAdmCli" href="#">Alta de incidencias</a></li><hr>
+        <li><a href="#">Alta de petición</a></li><hr>
+        <li><a class="misInc" href="#">Mis incidencias</a></li><hr>
+        <li><a class="modInc" href="#">Modificar incidencias</a></li><hr>
+        <li><a class="reabrirInc" href="#">Reabrir incidencias</a></li><hr>
+        <li><a class="detInc" href="#">Detalle incidencia</a></li><hr>
+  	  </ul>
+  	</div>
   </li>
-  <li><a href="#">REPORTES</a>
-    <ul>
-      <li><a href="#">Reporte 1</a></li>
-      <li><a href="#">Reporte 2</a></li>
-    </ul>
+  <li>
+    <div class="collapsible-header"><a href="#">REPORTES</a></div>
+  	<div class="collapsible-body">
+  	  <ul class="navega">
+  	    <li><a class="reportes" href="#">Reporte 1</a></li><hr>
+        <li><a class="reportes" href="#">Reporte 2</a></li><hr>
+  	  </ul>
+  	</div>
   </li>
-  <li><a href="#">PRODUCTOS</a>
-    <ul>
-      <li><a href="#">Contratar producto</a></li>
-      <li><a href="#">Baja producto</a></li>
-    </ul>
+  <li>
+    <div class="collapsible-header"><a href="#">PRODUCTOS</a></div>
+  	<div class="collapsible-body">
+  	  <ul class="navega">
+        <li><a href="#">Contratar producto</a></li><hr>
+        <li><a href="#">Baja producto</a></li><hr>
+  	  </ul>
+  	</div>
   </li>
 </ul>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="js/scripts.js"></script>
