--- a/funciones/menu2.html
+++ b/funciones/menu2.html
@@ -1,13 +1,19 @@
-<ul class="acorh">
-  <li><a href="#">INCIDENCIAS</a>
-    <ul>
-      <li><a href="#">Alta de incidencia</a></li>
-      <li><a href="#">Alta de petición</a></li>
-      <li><a href="#">Incidencias sin asignar</a></li>
-      <li><a href="#">Incidencias asignadas a mi</a></li>
-      <li><a href="#">Asignarme incidencia</a></li>
-      <li><a href="#">Reasignar incidencia</a></li>
-      <li><a href="#">Mis incidencias</a></li>
-    </ul>
+<ul class="collapsible">
+  <li class="active">
+    <div class="collapsible-header"><a href="#">INCIDENCIAS</a></div>
+  	<div class="collapsible-body">
+  	  <ul class="navega">
+        <li><a class="altIncEmp" href="#">Alta de incidencia</a></li><hr>
+        <li><a href="#">Alta de petición</a></li><hr>
+        <li><a class="incSinAsi" href="#">Incidencias sin asignar</a></li><hr>
+        <li><a class="incAsiMi" href="#">Incidencias asignadas a mi</a></li><hr>
+        <li><a class="asiInc" href="#">Asignarme incidencia</a></li><hr>
+        <li><a class="reasignarInc" href="#">Reasignar incidencia</a></li><hr>
+        <li><a class="misInc" href="#">Mis incidencias</a></li><hr>
+  	  </ul>
+  	</div>
   </li>
 </ul>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="js/scripts.js"></script>
