--- a/funciones/menu1.html
+++ b/funciones/menu1.html
@@ -32,8 +32,8 @@
     <div class="collapsible-header"><a href="#">INCIDENCIA</a></div>
   	<div class="collapsible-body">
   	  <ul class="navega">
-  	    <li><a class="altIncAdmCli" href="#">Alta de incidencia</a></li><hr>
-        <li><a href="#">Alta de petición</a></li><hr>
+  	    <li><a class="altIncPetAdmCli" href="#">Alta de incidencia</a></li><hr>
+        <li><a class="altIncPetAdmCli" href="#">Alta de petición</a></li><hr>
   	  </ul>
   	</div>
   </li>
