--- a/funciones/menu2.html
+++ b/funciones/menu2.html
@@ -6,7 +6,7 @@
         <li><a class="altIncEmp" href="#">Alta de incidencia</a></li><hr>
         <li><a href="#">Alta de petición</a></li><hr>
         <li><a class="incSinAsi" href="#">Incidencias sin asignar</a></li><hr>
-        <li><a class="incAsiMi" href="#">Incidencias asignadas a mi</a></li><hr>
+        <li><a href="#">Incidencias asignadas a mi</a></li><hr>
         <li><a class="asiInc" href="#">Asignarme incidencia</a></li><hr>
         <li><a class="reasignarInc" href="#">Reasignar incidencia</a></li><hr>
         <li><a class="misInc" href="#">Mis incidencias</a></li><hr>
