--- a/funciones/menu3.html
+++ b/funciones/menu3.html
@@ -3,8 +3,8 @@
     <div class="collapsible-header"><a href="#">INCIDENCIAS</a></div>
   	<div class="collapsible-body">
   	  <ul class="navega">
-        <li><a class="altIncAdmCli" href="#">Alta de incidencias</a></li><hr>
-        <li><a href="#">Alta de petición</a></li><hr>
+        <li><a class="altIncPetAdmCli" href="#">Alta de incidencias</a></li><hr>
+        <li><a class="altIncPetAdmCli" href="#">Alta de petición</a></li><hr>
         <li><a class="misInc" href="#">Mis incidencias</a></li><hr>
         <li><a class="modInc" href="#">Modificar incidencias</a></li><hr>
         <li><a class="reabrirInc" href="#">Reabrir incidencias</a></li><hr>
@@ -25,8 +25,8 @@
     <div class="collapsible-header"><a href="#">PRODUCTOS</a></div>
   	<div class="collapsible-body">
   	  <ul class="navega">
-        <li><a href="#">Contratar producto</a></li><hr>
-        <li><a href="#">Baja producto</a></li><hr>
+        <li><a class="conBajPro" href="#">Contratar producto</a></li><hr>
+        <li><a class="conBajPro" href="#">Baja producto</a></li><hr>
   	  </ul>
   	</div>
   </li>
