Conexion, funciones, menus.
-Conexion: se actualizó en nombre de la base de datos.
-Funciones: se actualizaron algunas funciones y se añadieron comentarios a funciones para posteriormente eliminarlas.
-Menus: Se actualizaron algunas clases.

--- a/funciones/menu2.html
+++ b/funciones/menu2.html
@@ -4,12 +4,12 @@
   	<div class="collapsible-body">
   	  <ul class="navega">
         <li><a class="altIncEmp" href="#">Alta de incidencia</a></li><hr>
-        <li><a href="#">Alta de petición</a></li><hr>
+        <li><a class="altPetEmp" href="#">Alta de petición</a></li><hr>
         <li><a class="incSinAsi" href="#">Incidencias sin asignar</a></li><hr>
-        <li><a href="#">Incidencias asignadas a mi</a></li><hr>
+        <li><a class="incAsiAMi" href="#">Incidencias asignadas a mi</a></li><hr>
         <li><a class="asiInc" href="#">Asignarme incidencia</a></li><hr>
         <li><a class="reasignarInc" href="#">Reasignar incidencia</a></li><hr>
-        <li><a class="misInc" href="#">Mis incidencias</a></li><hr>
+        <li><a class="misIncEmp" href="#">Mis incidencias</a></li><hr>
   	  </ul>
   	</div>
   </li>
