--- a/funciones/menu3.html
+++ b/funciones/menu3.html
@@ -25,7 +25,7 @@
     <div class="collapsible-header"><a href="#">PRODUCTOS</a></div>
   	<div class="collapsible-body">
   	  <ul class="navega">
-        <li><a class="NULL" href="#">Contratar producto</a></li><hr>
+        <li><a class="conPro" href="#">Contratar producto</a></li><hr>
         <li><a class="NULL" href="#">Baja producto</a></li><hr>
   	  </ul>
   	</div>
