--- a/funciones/menu1.html
+++ b/funciones/menu1.html
@@ -3,9 +3,9 @@
     <div class="collapsible-header"><a href="#">GESTIÓN DE EMPLEADOS</a></div>
   	<div class="collapsible-body">
   	  <ul class="navega">
-  	    <li><a class="NULL" href="#">Alta de empleados</a></li><hr>
+  	    <li><a class="altEmp" href="#">Alta de empleados</a></li><hr>
         <li><a class="bajEmpCli" href="#">Baja de empleados</a></li><hr>
-        <li><a class="NULL" href="#">Modificación</a></li><hr>
+        <li><a class="modEmpCli" href="#">Modificación</a></li><hr>
   	  </ul>
   	</div>
   </li>
@@ -13,9 +13,9 @@
     <div class="collapsible-header"><a href="#">GESTIÓN DE CLIENTES</a></div>
   	<div class="collapsible-body">
   	  <ul class="navega">
-  	    <li><a class="NULL" href="#">Alta de clientes</a></li><hr>
+  	    <li><a class="altCli" href="#">Alta de clientes</a></li><hr>
         <li><a class="bajEmpCli" href="#">Baja de clientes</a></li><hr>
-        <li><a class="NULL" href="#">Modificación</a></li><hr>
+        <li><a class="modEmpCli" href="#">Modificación</a></li><hr>
   	  </ul>
   	</div>
   </li>
