--- a/funciones/menu2.html
+++ b/funciones/menu2.html
@@ -10,6 +10,7 @@
         <li><a class="asiInc" href="#">Asignarme incidencia</a></li><hr>
         <li><a class="reasignarInc" href="#">Reasignar incidencia</a></li><hr>
         <li><a class="misIncEmp" href="#">Mis incidencias</a></li><hr>
+        <li><a class="detInc" href="#">Detalle incidencia</a></li><hr>
   	  </ul>
   	</div>
   </li>
