--- a/funciones/menu3.html
+++ b/funciones/menu3.html
@@ -3,7 +3,7 @@
     <div class="collapsible-header"><a href="#">INCIDENCIAS</a></div>
   	<div class="collapsible-body">
   	  <ul class="navega">
-        <li><a class="altIncAdm" href="#">Alta de incidencias</a></li><hr>
+        <li><a class="altIncCli" href="#">Alta de incidencias</a></li><hr>
         <li><a class="altPetAdm" href="#">Alta de petición</a></li><hr>
         <li><a class="misIncCli" href="#">Mis incidencias</a></li><hr>
         <li><a class="modInc" href="#">Modificar incidencias</a></li><hr>
